Add shared preference setting activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
+
+    implementation "androidx.preference:preference:1.1.1"
+
     // Places library
     implementation 'com.google.android.libraries.places:places:2.4.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
