--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         tools:ignore="GoogleAppIndexingWarning"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
+        android:fullBackupContent="true">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key">
@@ -34,7 +36,8 @@
         <activity android:name=".DirectoryActivity" />
         <activity android:name=".ColorActivity" />
         <activity android:name=".SelectActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsActivity"
+            android:theme="@style/Theme.Custom" />
     </application>
 
 </manifest>
