--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    implementation 'com.google.android.gms:play-services-maps:18.0.0'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation "androidx.preference:preference:1.1.1"
-
+    implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     // Places library
     implementation 'com.google.android.libraries.places:places:2.5.0'
 
