--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -30,20 +30,24 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "com.google.android.material:material:1.4.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.gms:play-services-auth:20.0.0'
-    implementation 'com.google.android.gms:play-services-maps:18.0.1'
-    implementation 'com.google.android.gms:play-services-location:19.0.0'
+//    implementation 'com.google.android.gms:play-services-auth:20.0.0'
+//    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+//    implementation 'com.google.android.gms:play-services-location:19.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation "androidx.preference:preference:1.1.1"
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     // Places library
-    implementation 'com.google.android.libraries.places:places:2.5.0'
+//    implementation 'com.google.android.libraries.places:places:2.5.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    annotationProcessor 'androidx.room:room-compiler:2.4.1' // room db related
+    implementation 'androidx.room:room-runtime:2.4.1'
+
 }
