--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 31    /* version 30 makes error for room db */
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,7 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.4.1' // room db related
+    annotationProcessor 'androidx.room:room-compiler:2.4.1' // room db related , compileSDK should be 31
     implementation 'androidx.room:room-runtime:2.4.1'
 
 }
