--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.urrecliner.blackphoto'
 }
 
 dependencies {
@@ -30,7 +31,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "com.google.android.material:material:1.4.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 //    implementation 'com.google.android.gms:play-services-auth:20.0.0'
@@ -38,7 +39,7 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services-location:19.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
-    implementation "androidx.preference:preference:1.1.1"
+    implementation "androidx.preference:preference:1.2.0"
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     // Places library
 //    implementation 'com.google.android.libraries.places:places:2.5.0'
@@ -47,7 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.4.1' // room db related , compileSDK should be 31
-    implementation 'androidx.room:room-runtime:2.4.1'
+    annotationProcessor 'androidx.room:room-compiler:2.4.2' // room db related , compileSDK should be 31
+    implementation 'androidx.room:room-runtime:2.4.2'
 
 }
